SEM and SLM probit and probit models added.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,7 @@
 Package: SEjags
 Title: Bayesian spatial econometrics models with jags
-Version: 0.0.0.9000
+Version: 0.1
+Date: 2016-14-02
 Authors@R: person("Virgilio", "G<U+000ED97A>-Rubio", email = "Virgilio.Gomez@uclm.es", role = c("aut", "cre"))
 Description: Implementation of several spatial econometrics models to be
     run with jags. Models include SEM, SLM, SDM, SDEM, SLX and SAC (with lagged
