--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,16 @@
 Package: SEjags
-Title: Bayesian spatial econometrics models with jags
+Title: Bayesian Spatial Econometrics Models with jags
 Version: 0.1
 Date: 2016-14-02
-Authors@R: person("Virgilio", "G<U+000ED97A>-Rubio", email = "Virgilio.Gomez@uclm.es", role = c("aut", "cre"))
+Authors@R: c(person("Virgilio",  "Gomez-Rubio", email = "Virgilio.Gomez@uclm.es", role = c("aut", "cre")))
+Author: Virgilio Gomez-Rubio [aut, cre]
+Maintainer: Virgilio Gomez-Rubio <Virgilio.Gomez@uclm.es>
 Description: Implementation of several spatial econometrics models to be
     run with jags. Models include SEM, SLM, SDM, SDEM, SLX and SAC (with lagged
     covariates).
-Depends: spdep, rjags, parallel, R (>= 3.3.1)
-Imports: parallel
+Depends: spdep, rjags, parallel, knitr, R (>= 3.3.1)
 License: GPL-3
-Encoding: ISO-8859-1
+Encoding: UTF-8
 LazyData: true
-RoxygenNote: 5.0.1
+RoxygenNote: 6.0.0
 VignetteBuilder: knitr
