More travis options.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,15 @@
 language: r
 
+r:
+  - release
+  - devel
+
+cache: packages
+
+sudo: required
+
+dist: trusty
+
 before_install:
   - sudo apt-get install jags
+
