Added env setting not to build vignettes.

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,3 +26,7 @@ r_github_packages:
 
 after_success:
   - Rscript -e 'covr::codecov()'
+
+env:
+  global:
+    - R_CHECK_ARGS="--no-build-vignettes"
