--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,5 @@ r_github_packages:
 after_success:
   - Rscript -e 'covr::codecov()'
 
-env:
-  global:
-    - R_CHECK_ARGS="--no-build-vignettes"
+r_build_args: --no-build-vignettes --no-manual --no-resave-data
+r_check_args: --no-build-vignettes --no-manual
