Warnings are not errors.

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,3 +29,5 @@ after_success:
 
 r_build_args: --no-build-vignettes --no-manual --no-resave-data
 r_check_args: --no-build-vignettes --no-manual
+
+warnings_are_errors: false
