--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,9 +8,9 @@ Maintainer: Virgilio Gomez-Rubio <Virgilio.Gomez@uclm.es>
 Description: Implementation of several spatial econometrics models to be
     run with jags. Models include SEM, SLM, SDM, SDEM, SLX and SAC (with lagged
     covariates).
-Depends: spdep, rjags, parallel, knitr, R (>= 3.3.1)
+Depends: spdep, rjags, parallel, knitr, rstan, R (>= 3.3.1)
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 6.0.0
+RoxygenNote: 6.0.1
 VignetteBuilder: knitr
