--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,4 +4,14 @@ S3method(impacts,SEMCMC)
 S3method(print,impacts.SEMCMC)
 export(SEMCMC)
 export(impacts)
+importFrom(coda,mcmc)
+importFrom(coda,mcmc.list)
+importFrom(parallel,mclapply)
+importFrom(rjags,coda.samples)
+importFrom(rjags,jags.model)
 importFrom(rstan,stan)
+importFrom(stats,model.frame)
+importFrom(stats,model.matrix)
+importFrom(stats,sd)
+importFrom(stats,terms)
+importFrom(stats,update)
