--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,27 @@
-# R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
+language: r
 
-language: R
+r:
+  - release
+  - devel
+
 cache: packages
+
+sudo: required
+
+dist: trusty
+
+before_install:
+  - sudo apt-get install jags
+
+r_packages:
+  - rmarkdown
+  - INLA
+
+repos:
+  CRAN: https://cloud.r-project.org
+  INLA: https://inla.r-inla-download.org/R/testing
+
+r_build_args: --no-build-vignettes --no-manual --no-resave-data
+r_check_args: --no-build-vignettes --no-manual
+
+warnings_are_errors: false
