--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,17 @@
 language: r
 
 r:
+  - oldrel
   - release
   - devel
 
 cache: packages
 
+
 sudo: required
 
-dist: trusty
+os:
+  -linux 
 
 before_install:
   - sudo apt-get install jags
@@ -16,12 +19,15 @@ before_install:
 r_packages:
   - rmarkdown
   - INLA
+  - rjags
+  - devtools
 
+cran: http://cran.rstudio.com
 repos:
   CRAN: https://cloud.r-project.org
   INLA: https://inla.r-inla-download.org/R/testing
 
-r_build_args: --no-build-vignettes --no-manual --no-resave-data
-r_check_args: --no-build-vignettes --no-manual
+r_build_args: '--no-build-vignettes --no-manual --no-resave-data'
+r_check_args: '--no-build-vignettes --no-manual'
 
 warnings_are_errors: false
