Includd installation of libudunits2-dev

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ os:
   - linux 
 
 before_install:
-  - sudo apt-get install jags
+  - sudo apt-get install jags libudunits2-dev
 
 r_packages:
   - rmarkdown
