--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,31 @@ r_packages:
   - rjags
   - devtools
 
+# From github/sf/.travis.yml
+addons:
+  #postgresql: "9.6"
+  apt:
+    sources:
+      - sourceline: 'ppa:opencpu/jq'
+      - sourceline: 'ppa:ubuntugis/ubuntugis-unstable'
+      - sourceline: 'deb http://apt.postgresql.org/pub/repos/apt/ trusty-pgdg main'
+        key_url: 'https://www.postgresql.org/media/keys/ACCC4CF8.asc'
+    packages:
+      - devscripts # checkbashisms
+      - libprotobuf-dev
+      - protobuf-compiler
+      - libv8-3.14-dev
+      - libjq-dev
+      - libudunits2-dev
+      - libproj-dev
+      - libgeos-dev
+      - libspatialite-dev
+      - libgdal-dev
+      - libjson-c-dev
+      - libnetcdf-dev
+      - netcdf-bin
+      - postgresql-server-dev-9.6
+
 cran: http://cran.rstudio.com
 repos:
   CRAN: https://cloud.r-project.org
